Fix Cart&Checkout layout broken in some themes (https://github.com/woocommerce/woocommerce-blocks/pull/3111)

--- a/plugins/woocommerce-blocks/assets/js/base/components/sidebar-layout/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/sidebar-layout/style.scss
@@ -5,6 +5,7 @@
 	position: relative;
 
 	.wc-block-components-main {
+		box-sizing: border-box;
 		margin: 0;
 		padding-right: percentage($gap-largest / 1060px); // ~1060px is the default width of the content area in Storefront.
 		width: 65%;
@@ -12,6 +13,7 @@
 }
 
 .wc-block-components-sidebar {
+	box-sizing: border-box;
 	margin: 0;
 	padding-left: percentage($gap-large / 1060px);
 	width: 35%;
